<resources>
    <string name="app_name">library</string>
    <string name="app_homePage">首页</string>
    <string name="app_add">"增加"</string>
    <string name="app_delete">"删除""</string>
    <string name="app_change">"修改"</string>
    <string name="app_select">"查找"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>